hiding fixed footer on mobile displays

--- a/css/business-casual.css
+++ b/css/business-casual.css
@@ -68,12 +68,7 @@ hr {
     font-weight: 1000;
     letter-spacing: 2px;
     }
-.navbar-brand-tel {
- 
-    font-family:'exotc350_bd_btbold', Arial, sans-serif;
-    font-weight: 1000;
-    letter-spacing: 2px;
-}
+
 .navbar-nav {
     text-transform: uppercase;
     font-weight: 400;
